--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 18.3.7
+Date: 2020-03-04
+  Bugfixes:
+    - Fixed bug that crash the game when loading save on MP server. (Reported by [SilentSean](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5e5d2b6d8c94fb000b3bd978))
+---------------------------------------------------------------------------------------------------
+Version: 17.3.7
+Date: 2020-03-04
+  Bugfixes:
+    - Fixed bug that crash the game when loading save on MP server. (Reported by [SilentSean](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5e5d2b6d8c94fb000b3bd978))
+---------------------------------------------------------------------------------------------------
 Version: 18.3.6
 Date: 2020-02-06
   Bugfixes:
