--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,21 @@
 ---------------------------------------------------------------------------------------------------
+Version: 18.5.0
+Date: 2020-07-29
+  Bugfixes:
+    - Avoid crash where player_index is nil. (Reported by [Ritn](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5f20c255b153a0da59a51d89)
+---------------------------------------------------------------------------------------------------
+Version: 17.5.0
+Date: 2020-07-29
+  Bugfixes:
+    - Avoid crash where player_index is nil. (Reported by [Ritn](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5f20c255b153a0da59a51d89)
+---------------------------------------------------------------------------------------------------
 Version: 18.4.0
-Date: 2020-03-04
+Date: 2020-07-15
   Locale:
     - Add the Russian-language localization. (Reported by [TheLastEagle](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5f0a5b4fd622564d149dc855))
 ---------------------------------------------------------------------------------------------------
 Version: 17.4.0
-Date: 2020-03-04
+Date: 2020-07-15
   Locale:
     - Add the Russian-language localization. (Reported by [TheLastEagle](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5f0a5b4fd622564d149dc855))
 ---------------------------------------------------------------------------------------------------
