--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 18.5.1
+Date: 2020-07-30
+  Bugfixes:
+    - Still trying to avoid crash...
+---------------------------------------------------------------------------------------------------
 Version: 18.5.0
 Date: 2020-07-29
   Bugfixes:
