--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ---------------------------------------------------------------------------------------------------
+Version: 18.5.4
+Date: 2020-07-30
+  Bugfixes:
+    - Refectoring ... new bug ... fixed.
+---------------------------------------------------------------------------------------------------
+Version: 17.5.4
+Date: 2020-07-30
+  Bugfixes:
+    - Refectoring ... new bug ... fixed.
+---------------------------------------------------------------------------------------------------
 Version: 18.5.3
 Date: 2020-07-30
   Bugfixes:
