--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 18.6.x
+Date: 2020-08-05
+  Bugfixes:
+    - Try to find the issue and workaround...
+---------------------------------------------------------------------------------------------------
 Version: 18.5.4
 Date: 2020-07-30
   Bugfixes:
