--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,20 @@
 ---------------------------------------------------------------------------------------------------
+Version: 18.7.0
+Date: 2020-08-07
+  Changes:
+    - Major refactor of the code, including the new catching error function `safecall`. Split some `control.lua`'s content into separated modules.
+---------------------------------------------------------------------------------------------------
+Version: 17.7.0
+Date: 2020-08-07
+  Changes:
+    - Major refactor of the code, including the new catching error function `safecall`. Split some `control.lua`'s content into separated modules.
+---------------------------------------------------------------------------------------------------
+Version: 18.6.11
+Date: 2020-08-06
+  Bugfixes:
+    - The issue was found: `cursor.is_blueprint_setup` can raise an error "Item is not blueprint" even if everything else said "it is a blueprint or a blueplrint book"
+    - Thanks to pertm, clocksporchi and snakepowa for the ["Item is not blueprint" bug report and feedback](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5f27e16e06da6e783975ac05)
+---------------------------------------------------------------------------------------------------
 Version: 18.6.x
 Date: 2020-08-05
   Bugfixes:
