--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 100.8.0
+Date: 2020-11-02
+  Changes:
+    - Support factorio 1.00
+---------------------------------------------------------------------------------------------------
 Version: 18.8.0
 Date: 2020-11-02
   Changes:
