--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,15 @@
 ---------------------------------------------------------------------------------------------------
-Version: 100.8.0
+Version: 100.8.1
+Date: 2020-11-02
+  Changes:
+    - Support factorio 1.00
+---------------------------------------------------------------------------------------------------
+Version: 18.8.1
+Date: 2020-11-02
+  Changes:
+    - Support factorio 1.00
+---------------------------------------------------------------------------------------------------
+Version: 17.8.1
 Date: 2020-11-02
   Changes:
     - Support factorio 1.00
