--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,19 @@
 ---------------------------------------------------------------------------------------------------
+Version: 100.8.2
+Date: 2020-11-02
+  Bugfixes:
+    - Fix Crash related to the new Reverse Inserter event.
+---------------------------------------------------------------------------------------------------
+Version: 18.8.2
+Date: 2020-11-02
+  Bugfixes:
+    - Fix Crash related to the new Reverse Inserter event.
+---------------------------------------------------------------------------------------------------
+Version: 17.8.2
+Date: 2020-11-02
+  Bugfixes:
+    - Fix Crash related to the new Reverse Inserter event.
+---------------------------------------------------------------------------------------------------
 Version: 100.8.1
 Date: 2020-11-02
   Changes:
