--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,19 @@
 ---------------------------------------------------------------------------------------------------
+Version: 100.8.6
+Date: 2020-11-23
+  Bugfixes:
+    - Minor fix to the changelog. (Reported by [Fr_Dae](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5fba29946552126b62dc0db2)
+---------------------------------------------------------------------------------------------------
+Version: 18.8.6
+Date: 2020-11-23
+  Bugfixes:
+    - Minor fix to the changelog. (Reported by [Fr_Dae](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5fba29946552126b62dc0db2)
+---------------------------------------------------------------------------------------------------
+Version: 17.8.6
+Date: 2020-11-23
+  Bugfixes:
+    - Minor fix to the changelog. (Reported by [Fr_Dae](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5fba29946552126b62dc0db2)
+---------------------------------------------------------------------------------------------------
 Version: 100.8.5
 Date: 2020-11-03
   Bugfixes:
@@ -89,7 +104,7 @@ Date: 2020-08-06
     - The issue was found: `cursor.is_blueprint_setup` can raise an error "Item is not blueprint" even if everything else said "it is a blueprint or a blueplrint book"
     - Thanks to pertm, clocksporchi and snakepowa for the ["Item is not blueprint" bug report and feedback](https://mods.factorio.com/mod/blueprint_flip_and_turn/discussion/5f27e16e06da6e783975ac05)
 ---------------------------------------------------------------------------------------------------
-Version: 18.6.x
+Version: 18.6.0
 Date: 2020-08-05
   Bugfixes:
     - Try to find the issue and workaround...
