--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 101.8.6
+Date: 2020-12-01
+  Changes:
+    - Try to support Factorio 1.1
+---------------------------------------------------------------------------------------------------
 Version: 100.8.6
 Date: 2020-11-23
   Bugfixes:
